pi-cluster/cluster/apps/truenas/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: truenas
subsets:
  - addresses:
      - ip: 192.168.50.10
    ports:
      - name: http
        port: 80
        protocol: TCP
