pi-cluster/cluster/apps/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: truenas
  labels:
    app: truenas
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
